fixes missing border on event creator in invitee list for IE9

--- a/app/assets/stylesheets/base/_tables.css.scss
+++ b/app/assets/stylesheets/base/_tables.css.scss
@@ -123,7 +123,7 @@ div.table-wrapper {
             }
 
             &.event-creator {
-              position: relative;
+              position: static;
 
               img {
                 @include inline-block;
